@@ -4,12 +4,14 @@ include $(top_srcdir)/build/Makefile.am.gi18n-check
 
 AM_CPPFLAGS += 						\
 	-DLOCALEDIR=\""$(datadir)/locale"\" 	  	\
-	-DPREFIX="\"$(prefix)"\"		 	\
 	-DDATADIR=\""$(datadir)"\"                      \
 	-DG_LOG_DOMAIN=\"Devhelp\"			\
 	-DG_DISABLE_DEPRECATED				\
 	-DGDK_DISABLE_DEPRECATED			\
 	-DGTK_DISABLE_DEPRECATED			\
+	-DG_DISABLE_SINGLE_INCLUDES			\
+	-DGDK_PIXBUF_DISABLE_SINGLE_INCLUDES		\
+	-DGTK_DISABLE_SINGLE_INCLUDES			\
 	$(WARN_CFLAGS)
 
 bin_PROGRAMS = devhelp
